🐛 fix [BUG] Stack Overflow icon is broken #18

--- a/SCSS/_blocks/_textdecoration/_links-signifier.scss
+++ b/SCSS/_blocks/_textdecoration/_links-signifier.scss
@@ -133,7 +133,7 @@ a.external-link[href*='stackoverflow'] {
 }
 
 a.external-link[href*='stackoverflow']::before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 622 124'%3E%3Cpolygon fill='%23BBBBBB' points='88 80 99 80 99 124 0 124 0 80 11 80 11 113 88 113'/%3E%3Cpath fill='%23F58025' d='M22.9878906,76.73 L77.0128906,88.085 L79.2838906,77.285 L25.2588906,65.925 L22.9878906,76.73 Z M30.1368906,50.861 L80.1828906,74.169 L84.8448906,64.16 L34.7978906,40.852 L30.1368906,50.861 Z M43.9848906,26.308 L86.4128906,61.639 L93.4788906,53.154 L51.0508906,17.824 L43.9848906,26.308 Z M71.3718906,0.192 L62.5118906,6.782 L95.4598906,51.082 L104.319891,44.493 L71.3718906,0.192 Z M22,102 L77,102 L77,91 L22,91 L22,102 Z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 124 124'%3E%3Cpolygon fill='%23BBBBBB' points='88 80 99 80 99 124 0 124 0 80 11 80 11 113 88 113'/%3E%3Cpath fill='%23F58025' d='M22.9878906,76.73 L77.0128906,88.085 L79.2838906,77.285 L25.2588906,65.925 L22.9878906,76.73 Z M30.1368906,50.861 L80.1828906,74.169 L84.8448906,64.16 L34.7978906,40.852 L30.1368906,50.861 Z M43.9848906,26.308 L86.4128906,61.639 L93.4788906,53.154 L51.0508906,17.824 L43.9848906,26.308 Z M71.3718906,0.192 L62.5118906,6.782 L95.4598906,51.082 L104.319891,44.493 L71.3718906,0.192 Z M22,102 L77,102 L77,91 L22,91 L22,102 Z'/%3E%3C/svg%3E");
   @include align-icon;
 }
 
